--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,5 +13,6 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: archlinux
+          options: --volume ${{ github.workspace }}:/work --workdir /work --privileged
           run: |
             run.sh
