Install rust no interactive.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,5 +17,5 @@ jobs:
           run: |
             pacman --noconfirm -Syu git curl
             pacman --noconfirm -Syu pkgconf gcc glibc openssl libxml2
-            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
             ./run.sh
