--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,5 @@ jobs:
             pacman --noconfirm -Syu git curl
             pacman --noconfirm -Syu pkgconf gcc glibc openssl libxml2
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+            export PATH=$HOME/.cargo/bin:$PATH
             ./run.sh
