--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,7 @@ jobs:
               base-devel \
               libxml2 \
               glibc \
+              gcc \
               #openbsd-netcat \
               #squid \
               #jq
