--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
 
             pacman --noconfirm -Syu git
             
-            pacman --noconfirm -Sy  \
+            pacman --noconfirm -Syu  \
               bash \
               sudo \
               openssl \
@@ -34,7 +34,7 @@ jobs:
               jq
             
             # Temporary install to patch a python3/pip crash
-            pacman -Sy --noconfirm expat
+            pacman -Syu --noconfirm expat
   
             curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
             export PATH=$HOME/.cargo/bin:$PATH
