Run curl in loop

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,33 +9,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4.1.7
 
-      - name: Bissect
+      - name: Run curl HTTP3
         uses: addnab/docker-run-action@v3
         with:
           image: archlinux
           options: --volume ${{ github.workspace }}:/work --workdir /work --privileged
           run: |
-
-            pacman --noconfirm -Syu git
-            
-            pacman --noconfirm -Syu  \
-              bash \
-              sudo \
-              openssl \
-              python3 \
-              python-pip \
-              icu \
-              base-devel \
-              libxml2 \
-              glibc \
-              gcc \
-              openbsd-netcat \
-              squid \
-              jq
-            
-            # Temporary install to patch a python3/pip crash
-            pacman -Syu --noconfirm expat
-  
-            curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
-            export PATH=$HOME/.cargo/bin:$PATH
-            ./run.sh
+            curl --version
+            ./run.sh https://google.com 100 1
