--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,32 +5,32 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-rust-docker-archlinux-x64:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4.1.7
-      - name: Run rust HTTP3
-        uses: addnab/docker-run-action@v3
-        with:
-          image: archlinux
-          options: --volume ${{ github.workspace }}:/work --workdir /work --privileged
-          run: |
-            set -Eeuo pipefail
-
-            echo "::group::Installation prerequisites"
-            ./setup_build_rust.sh
-            echo "::endgroup::"
-
-            export PATH=$HOME/.cargo/bin:$PATH
-
-            echo "::group::Build"
-            ./build_rust.sh
-            echo "::endgroup::"
-
-            echo "::group::Run"
-            ./run_rust.sh https://google.com 20 1
-            echo "::endgroup::"
+#  test-rust-docker-archlinux-x64:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v4.1.7
+#      - name: Run rust HTTP3
+#        uses: addnab/docker-run-action@v3
+#        with:
+#          image: archlinux
+#          options: --volume ${{ github.workspace }}:/work --workdir /work --privileged
+#          run: |
+#            set -Eeuo pipefail
+#
+#            echo "::group::Installation prerequisites"
+#            ./setup_build_rust.sh
+#            echo "::endgroup::"
+#
+#            export PATH=$HOME/.cargo/bin:$PATH
+#
+#            echo "::group::Build"
+#            ./build_rust.sh
+#            echo "::endgroup::"
+#
+#            echo "::group::Run"
+#            ./run_rust.sh https://google.com 20 1
+#            echo "::endgroup::"
   test-libcurl-docker-archlinux-x64:
     runs-on: ubuntu-latest
     steps:
