--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.7
-      - name: Run hurl HTTP3
+      - name: Run libcurl HTTP3
         uses: addnab/docker-run-action@v3
         with:
           image: archlinux
@@ -47,8 +47,6 @@ jobs:
             echo "::group::Installation prerequisites"
             ./setup_build_libcurl.sh
             echo "::endgroup::"
-
-            export PATH=$HOME/.cargo/bin:$PATH
 
             echo "::group::Build"
             ./build_libcurl.sh
